--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "kurokikaze@yandex.ru",
   "license": "MIT",
   "devDependencies": {
+    "eslint": "^6.8.0",
     "jest": "^24.9.0"
   },
   "dependencies": {
