--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "moonlands",
-  "version": "0.0.1",
-  "description": "Magi Nation Duels engine",
-  "main": "index.js",
+  "version": "0.0.3",
+  "description": "Magi-Nation Duels engine",
+  "main": "src/index.js",
   "directories": {
     "test": "test"
   },
