--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "moonlands",
-  "version": "0.0.3",
-  "description": "Magi-Nation Duels engine",
+  "version": "0.0.4",
+  "description": "Magi-Nation Duel engine",
   "main": "src/index.js",
   "directories": {
     "test": "test"
