--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "moonlands",
-  "version": "0.0.5",
+  "version": "v0.0.6",
   "description": "Magi-Nation Duel engine",
   "main": "src/index.js",
   "directories": {
