--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "test"
   },
   "scripts": {
-    "test": "jest"
+	"test": "jest",
+	"coverage": "jest --coverage"
   },
   "keywords": [
     "ccg"
