Workflow file fix

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -21,7 +21,7 @@ jobs:
       run: |
         npm ci
         npm test
-        npm coverage
+        npm run coverage
       env:
         CI: true
     - name: Coveralls GitHub Action
