--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "license": "MIT",
   "devDependencies": {
     "eslint": "^6.8.0",
+    "eslint-plugin-import": "^2.22.0",
     "jest": "^24.9.0"
   },
   "dependencies": {
