--- a/package.json
+++ b/package.json
@@ -27,8 +27,14 @@
   },
   "dependencies": {
     "@babel/preset-env": "^7.11.5",
+    "@babel/preset-typescript": "^7.12.7",
     "babel-jest": "^26.3.0",
+    "@types/node": ">=4.2.0 < 13",
+    "is-promise": "^2.1.0",
     "nanoid": "^2.1.9",
-    "socket.io": "^2.3.0"
+    "socket.io": "^2.3.0",
+    "ts-jest": "^26.4.4",
+    "tslint": "^6.1.3",
+    "typescript": "^4.1.3"
   }
 }
