--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
   "license": "MIT",
   "devDependencies": {
     "eslint": "^6.8.0",
-    "eslint-plugin-import": "^2.22.0",
-    "jest": "^24.9.0"
+    "eslint-plugin-import": "^2.22.0"
   },
   "dependencies": {
     "@babel/preset-env": "^7.11.5",
@@ -34,6 +33,7 @@
     "is-promise": "^2.1.0",
     "nanoid": "^2.1.9",
     "socket.io": "^2.3.0",
+    "jest": "^24.9.0",
     "ts-jest": "^26.4.4",
     "tslint": "^6.1.3",
     "typescript": "^4.1.3"
