--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,11 @@
 {
     "compilerOptions": {
-        "target": "ES5",
+        "target": "ES2020",
+        "lib": ["ES2020"],
+        "module": "ES2020",
         "esModuleInterop": true,
         "moduleResolution": "node",
+        "forceConsistentCasingInFileNames": true,
         "sourceMap": true,
         "outDir": "dist"
     },
