--- a/package.json
+++ b/package.json
@@ -28,14 +28,14 @@
   "dependencies": {
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-typescript": "^7.12.7",
+    "@types/nanoid": "^3.0.0",
     "@types/node": ">=4.2.0 < 13",
     "babel-jest": "^26.3.0",
     "is-promise": "^2.1.0",
+    "jest": "^24.9.0",
     "nanoid": "^2.1.9",
     "socket.io": "^2.3.0",
-    "jest": "^24.9.0",
     "ts-jest": "^26.4.4",
-    "tslint": "^6.1.3",
-    "typescript": "^4.1.3"
+    "typescript": "^4.7.4"
   }
 }
