--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,11 @@
 {
     "compilerOptions": {
-        "target": "ES2020",
-        "lib": ["ES2020"],
-        "module": "ES2020",
+        "target": "es5",
+        "lib": ["es6", "es2022"],
+        "module": "ESNext",
         "esModuleInterop": true,
         "moduleResolution": "node",
+        "strict": true,
         "forceConsistentCasingInFileNames": true,
         "sourceMap": true,
         "outDir": "dist"
