--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "scripts": {
     "build": "./node_modules/.bin/tsc -p ./tsconfig.json",
+    "build-types": "./node_modules/.bin/tsc -p ./tsconfig.json",
     "test": "./node_modules/.bin/jest",
     "coverage": "./node_modules/.bin/jest --coverage"
   },
@@ -23,19 +24,19 @@
   "license": "MIT",
   "devDependencies": {
     "eslint": "^6.8.0",
-    "eslint-plugin-import": "^2.22.0"
+    "eslint-plugin-import": "^2.22.0",
+    "jest": "^24.9.0",
+    "ts-jest": "^26.4.4",
+    "babel-jest": "^26.3.0"
   },
   "dependencies": {
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-typescript": "^7.12.7",
     "@types/nanoid": "^3.0.0",
     "@types/node": ">=4.2.0 < 13",
-    "babel-jest": "^26.3.0",
     "is-promise": "^2.1.0",
-    "jest": "^24.9.0",
     "nanoid": "^2.1.9",
     "socket.io": "^2.3.0",
-    "ts-jest": "^26.4.4",
     "typescript": "^4.7.4"
   }
 }
