--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
       "module": "CommonJS",
       "esModuleInterop": true,
       "moduleResolution": "node",
-      "strict": true,
+      "strict": false,
       "forceConsistentCasingInFileNames": true,
       "sourceMap": true,
       "outDir": "dist",
