--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
       "target": "es5",
       "lib": ["es6", "es2022"],
-      "module": "CommonJS",
+      "module": "ESNext",
       "esModuleInterop": true,
       "moduleResolution": "node",
       "strict": false,
