--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "scripts": {
     "build": "./node_modules/.bin/tsc -p ./tsconfig.json",
-    "build-types": "./node_modules/.bin/tsc -p ./tsconfig.json",
+    "build-types": "./node_modules/.bin/tsc -p ./tsconfig.json --declaration",
     "test": "./node_modules/.bin/jest",
     "coverage": "./node_modules/.bin/jest --coverage"
   },
