--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "moonlands",
-  "version": "v0.17.8",
+  "version": "v0.18.0",
   "description": "Magi-Nation Duel engine",
   "type": "module",
   "repository": {
@@ -27,13 +27,13 @@
     "eslint": "^6.8.0",
     "eslint-plugin-import": "^2.22.0",
     "jest": "^26.6.3",
-    "ts-jest": "^26.5.6"
-  },
-  "dependencies": {
+    "ts-jest": "^26.5.6",
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-typescript": "^7.12.7",
     "@types/node": ">=4.2.0 < 13",
-    "nanoid": "^3.0.0",
     "typescript": "^4.7.4"
+  },
+  "dependencies": {
+    "nanoid": "^3.0.0"
   }
 }
