--- a/package.json
+++ b/package.json
@@ -23,14 +23,15 @@
   "author": "kurokikaze@yandex.ru",
   "license": "MIT",
   "devDependencies": {
+    "@babel/preset-env": "^7.11.5",
+    "@babel/preset-typescript": "^7.12.7",
+    "@types/jest": "^29.5.3",
+    "@types/node": ">=4.2.0 < 13",
     "babel-jest": "^26.3.0",
     "eslint": "^6.8.0",
     "eslint-plugin-import": "^2.22.0",
     "jest": "^26.6.3",
     "ts-jest": "^26.5.6",
-    "@babel/preset-env": "^7.11.5",
-    "@babel/preset-typescript": "^7.12.7",
-    "@types/node": ">=4.2.0 < 13",
     "typescript": "^4.7.4"
   },
   "dependencies": {
