--- a/package.json
+++ b/package.json
@@ -27,14 +27,15 @@
     "@babel/preset-typescript": "^7.12.7",
     "@types/jest": "^29.5.3",
     "@types/node": ">=4.2.0 < 13",
-    "babel-jest": "^26.3.0",
+    "babel-jest": "^29.0.0",
     "eslint": "^6.8.0",
     "eslint-plugin-import": "^2.22.0",
-    "jest": "^26.6.3",
-    "ts-jest": "^26.5.6",
-    "typescript": "^4.7.4"
+    "jest": "^29.0.0",
+    "ts-jest": "^29.1.2",
+    "typescript": "^5.4.3"
   },
   "dependencies": {
-    "nanoid": "^3.0.0"
+    "nanoid": "^3.0.0",
+    "ts-pattern": "^5.0.8"
   }
 }
