--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
     "typescript": "^5.4.3"
   },
   "dependencies": {
-    "nanoid": "^3.0.0",
-    "ts-pattern": "^5.0.8"
+    "nanoid": "^3.0.0"
   }
 }
