--- a/package.json
+++ b/package.json
@@ -1,40 +1,44 @@
 {
-  "name": "moonlands",
-  "version": "v0.23.7",
-  "description": "Magi-Nation Duel engine",
-  "type": "module",
-  "repository": {
-    "type": "git",
-    "url": "git@github.com:kurokikaze/moonlands.git"
-  },
-  "main": "dist/esm/index.js",
+    "name": "moonlands",
+    "version": "v0.23.7",
+    "description": "Magi-Nation Duel engine",
+    "type": "module",
+    "repository": {
+        "type": "git",
+        "url": "git@github.com:kurokikaze/moonlands.git"
+    },
+    "main": "dist/esm/index.js",
+    "exports": {
+        "import": "./dist/esm/index.js",
+        "require": "./dist/cjs/index.js"
+    },
   "directories": {
-    "test": "test"
-  },
-  "scripts": {
-    "build": "./node_modules/.bin/tsc -p ./tsconfig.json",
-    "build-types": "./node_modules/.bin/tsc -p ./tsconfig.json --declaration",
-    "test": "./node_modules/.bin/jest",
-    "coverage": "./node_modules/.bin/jest --coverage"
-  },
-  "keywords": [
-    "ccg"
-  ],
-  "author": "kurokikaze@yandex.ru",
-  "license": "MIT",
-  "devDependencies": {
-    "@babel/preset-env": "^7.11.5",
-    "@babel/preset-typescript": "^7.12.7",
-    "@types/jest": "^29.5.3",
-    "@types/node": ">=4.2.0 < 13",
-    "babel-jest": "^29.0.0",
-    "eslint": "^6.8.0",
-    "eslint-plugin-import": "^2.22.0",
-    "jest": "^29.0.0",
-    "ts-jest": "^29.1.2",
-    "typescript": "^5.4.3"
-  },
-  "dependencies": {
-    "nanoid": "^3.0.0"
-  }
+        "test": "test"
+    },
+    "scripts": {
+        "build": "./node_modules/.bin/tsc -p ./tsconfig.json",
+        "build-types": "./node_modules/.bin/tsc -p ./tsconfig.json --declaration",
+        "test": "./node_modules/.bin/jest",
+        "coverage": "./node_modules/.bin/jest --coverage"
+    },
+    "keywords": [
+        "ccg"
+    ],
+    "author": "kurokikaze@yandex.ru",
+    "license": "MIT",
+    "devDependencies": {
+        "@babel/preset-env": "^7.11.5",
+        "@babel/preset-typescript": "^7.12.7",
+        "@types/jest": "^29.5.3",
+        "@types/node": ">=4.2.0 < 13",
+        "babel-jest": "^29.0.0",
+        "eslint": "^6.8.0",
+        "eslint-plugin-import": "^2.22.0",
+        "jest": "^29.0.0",
+        "ts-jest": "^29.1.2",
+        "typescript": "^5.4.3"
+    },
+    "dependencies": {
+        "nanoid": "^3.0.0"
+    }
 }
