--- a/package.json
+++ b/package.json
@@ -36,10 +36,10 @@
         "eslint-plugin-import": "^2.22.0",
         "jest": "^29.0.0",
         "ts-jest": "^29.1.2",
+        "tsc-alias": "^1.8.10",
         "typescript": "^5.4.3"
     },
     "dependencies": {
-        "nanoid": "^3.0.0",
-        "tsc-alias": "^1.8.10"
+        "nanoid": "^3.0.0"
     }
 }
