Added unmaker to the build list

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,8 @@
         "outDir": "dist/esm",
     },
     "include": [
-        "src/index.ts"
+        "src/index.ts",
+        "src/unmaker/unmaker.ts"
     ],
     "tsc-alias": {
         "resolveFullPaths": true,
